add amazon cognito routers,modify authenticateToken function
